--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "cakephp/app",
-    "description": "CakePHP skeleton app",
-    "homepage": "https://cakephp.org",
+    "description": "Lukas McDiarmid's Personal Website",
+    "homepage": "https://lukasmcd.me",
     "type": "project",
     "license": "MIT",
     "require": {
@@ -9,7 +9,8 @@
         "cakephp/cakephp": "~4.1.0",
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "muffin/slug": "^2.0"
     },
     "require-dev": {
         "cakephp/bake": "^2.0.3",
